--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prettier": "3.4.2"
   },
   "dependencies": {
+    "appwrite": "^17.0.1",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
     "cloudinary-build-url": "^0.2.4",
